Fix layout bug with skip link button on mobile

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -51,3 +51,17 @@
     justify-content: center;
   }
 }
+
+/* ====================== Mobile View Media Break Point ====================== */
+
+@media only screen and (max-width: 500px) {
+  .header-title {
+    font-size: 0.7em;
+  }
+  .skip-link {
+    font-size: 0.7em;
+  }
+  #breadcrumb li {
+    font-size: 0.6em;
+  }
+}
