--- a/css/styles.css
+++ b/css/styles.css
@@ -307,7 +307,7 @@ nav h1 a {
 }
 
 .skip-link:focus{
-	top: 0;
+	top: 40px;
 	left: 0;
 	z-index: 10000;
 }
